--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
   <script src="js/siriwave9.js"></script>
+  <script src="js/recognition.js"></script>
+
 
 </head>
 <body>
